# suzuki-doc-test.github.io

./: README.md  pyproject.toml  setup.py
.github/workflows/: sphinx.yml
docs/source/: conf.py
src/: test.py
